--- a/SadAgregator/View/cells/PaymentCell/PaymentTableViewCell.xib
+++ b/SadAgregator/View/cells/PaymentCell/PaymentTableViewCell.xib
@@ -1,9 +1,8 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="17701" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="18122" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
     <device id="retina6_1" orientation="portrait" appearance="light"/>
     <dependencies>
-        <deployment identifier="iOS"/>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="17703"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="18093"/>
         <capability name="Named colors" minToolsVersion="9.0"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="System colors in document resources" minToolsVersion="11.0"/>
@@ -12,48 +11,165 @@
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
-        <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" rowHeight="119" id="KGk-i7-Jjw" customClass="PaymentTableViewCell" customModule="SadAgregator" customModuleProvider="target">
-            <rect key="frame" x="0.0" y="0.0" width="320" height="119"/>
+        <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" rowHeight="197" id="KGk-i7-Jjw" customClass="PaymentTableViewCell" customModule="SadAgregator" customModuleProvider="target">
+            <rect key="frame" x="0.0" y="0.0" width="320" height="197"/>
             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
             <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="KGk-i7-Jjw" id="H2p-sc-9uM">
-                <rect key="frame" x="0.0" y="0.0" width="320" height="119"/>
+                <rect key="frame" x="0.0" y="0.0" width="320" height="197"/>
                 <autoresizingMask key="autoresizingMask"/>
                 <subviews>
                     <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" scrollEnabled="NO" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="0KC-8z-YJb">
-                        <rect key="frame" x="0.0" y="5" width="320" height="114"/>
+                        <rect key="frame" x="0.0" y="28" width="218" height="117"/>
                         <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                     </tableView>
                     <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="dBx-as-tHm">
-                        <rect key="frame" x="16" y="117" width="304" height="2"/>
+                        <rect key="frame" x="16" y="195" width="304" height="2"/>
                         <color key="backgroundColor" name="gray"/>
                         <constraints>
                             <constraint firstAttribute="height" constant="2" id="Knp-fI-UwZ"/>
                         </constraints>
                     </view>
+                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="gA2-Dd-hhs">
+                        <rect key="frame" x="16" y="8" width="249" height="20"/>
+                        <constraints>
+                            <constraint firstAttribute="height" constant="20" id="3mx-Bb-hfX"/>
+                        </constraints>
+                        <fontDescription key="fontDescription" type="system" pointSize="15"/>
+                        <color key="textColor" systemColor="systemGrayColor"/>
+                        <nil key="highlightedColor"/>
+                    </label>
+                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="252" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="VXl-BY-jK1">
+                        <rect key="frame" x="265" y="8" width="39" height="18"/>
+                        <fontDescription key="fontDescription" type="system" weight="semibold" pointSize="15"/>
+                        <nil key="textColor"/>
+                        <nil key="highlightedColor"/>
+                    </label>
+                    <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="tZL-BE-Wz3">
+                        <rect key="frame" x="16" y="153" width="288" height="34"/>
+                        <subviews>
+                            <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="alB-Bx-Kz4">
+                                <rect key="frame" x="8" y="8" width="272" height="18.5"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                <textInputTraits key="textInputTraits"/>
+                            </textField>
+                        </subviews>
+                        <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                        <constraints>
+                            <constraint firstAttribute="trailing" secondItem="alB-Bx-Kz4" secondAttribute="trailing" constant="8" id="5jm-RF-gRN"/>
+                            <constraint firstAttribute="height" constant="34" id="6WZ-z5-7rx"/>
+                            <constraint firstItem="alB-Bx-Kz4" firstAttribute="leading" secondItem="tZL-BE-Wz3" secondAttribute="leading" constant="8" id="pfp-aB-psn"/>
+                            <constraint firstItem="alB-Bx-Kz4" firstAttribute="centerY" secondItem="tZL-BE-Wz3" secondAttribute="centerY" id="qVH-Ef-r3O"/>
+                        </constraints>
+                    </view>
+                    <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="PKY-Wp-lYg" userLabel="left view">
+                        <rect key="frame" x="226" y="69" width="35" height="35"/>
+                        <subviews>
+                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="m1K-1e-nLb">
+                                <rect key="frame" x="5" y="5" width="25" height="25"/>
+                                <color key="tintColor" name="blackwhite"/>
+                            </imageView>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Vh3-ME-d9a">
+                                <rect key="frame" x="0.0" y="0.0" width="35" height="35"/>
+                                <connections>
+                                    <action selector="leftViewButtonTapped:" destination="KGk-i7-Jjw" eventType="touchUpInside" id="tbY-P0-rcv"/>
+                                </connections>
+                            </button>
+                        </subviews>
+                        <color key="backgroundColor" systemColor="systemGray2Color"/>
+                        <constraints>
+                            <constraint firstItem="m1K-1e-nLb" firstAttribute="leading" secondItem="PKY-Wp-lYg" secondAttribute="leading" constant="5" id="Aix-Lt-y3w"/>
+                            <constraint firstItem="Vh3-ME-d9a" firstAttribute="leading" secondItem="PKY-Wp-lYg" secondAttribute="leading" id="EBa-5d-8yI"/>
+                            <constraint firstAttribute="height" constant="35" id="Eo7-tv-75b"/>
+                            <constraint firstAttribute="bottom" secondItem="Vh3-ME-d9a" secondAttribute="bottom" id="Het-LB-bhH"/>
+                            <constraint firstAttribute="trailing" secondItem="Vh3-ME-d9a" secondAttribute="trailing" id="ko8-M3-pNf"/>
+                            <constraint firstItem="Vh3-ME-d9a" firstAttribute="top" secondItem="PKY-Wp-lYg" secondAttribute="top" id="mV6-4Z-AAb"/>
+                            <constraint firstItem="m1K-1e-nLb" firstAttribute="top" secondItem="PKY-Wp-lYg" secondAttribute="top" constant="5" id="qcm-XV-fin"/>
+                            <constraint firstAttribute="width" constant="35" id="qug-Ev-byR"/>
+                            <constraint firstAttribute="bottom" secondItem="m1K-1e-nLb" secondAttribute="bottom" constant="5" id="tao-MC-6J9"/>
+                            <constraint firstAttribute="trailing" secondItem="m1K-1e-nLb" secondAttribute="trailing" constant="5" id="tb1-X8-bj8"/>
+                        </constraints>
+                    </view>
+                    <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="GRZ-7T-foA" userLabel="right view">
+                        <rect key="frame" x="269" y="69" width="35" height="35"/>
+                        <subviews>
+                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="Q4W-ci-fAV">
+                                <rect key="frame" x="5" y="5" width="25" height="25"/>
+                                <color key="tintColor" name="blackwhite"/>
+                            </imageView>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="cvj-2O-U9s">
+                                <rect key="frame" x="0.0" y="0.0" width="35" height="35"/>
+                                <connections>
+                                    <action selector="rightViewButtonTapped:" destination="KGk-i7-Jjw" eventType="touchUpInside" id="Ksc-DY-gVR"/>
+                                </connections>
+                            </button>
+                        </subviews>
+                        <color key="backgroundColor" systemColor="systemGray2Color"/>
+                        <constraints>
+                            <constraint firstAttribute="bottom" secondItem="cvj-2O-U9s" secondAttribute="bottom" id="0x0-D3-m7U"/>
+                            <constraint firstAttribute="trailing" secondItem="cvj-2O-U9s" secondAttribute="trailing" id="KVF-wT-xQR"/>
+                            <constraint firstItem="cvj-2O-U9s" firstAttribute="leading" secondItem="GRZ-7T-foA" secondAttribute="leading" id="ZuI-m8-whl"/>
+                            <constraint firstAttribute="width" constant="35" id="dLo-6W-LXI"/>
+                            <constraint firstAttribute="height" constant="35" id="elR-4f-Qcb"/>
+                            <constraint firstAttribute="bottom" secondItem="Q4W-ci-fAV" secondAttribute="bottom" constant="5" id="iJl-nW-Ode"/>
+                            <constraint firstItem="Q4W-ci-fAV" firstAttribute="top" secondItem="GRZ-7T-foA" secondAttribute="top" constant="5" id="lXc-DJ-7Mf"/>
+                            <constraint firstItem="Q4W-ci-fAV" firstAttribute="leading" secondItem="GRZ-7T-foA" secondAttribute="leading" constant="5" id="wD5-oa-VYV"/>
+                            <constraint firstItem="cvj-2O-U9s" firstAttribute="top" secondItem="GRZ-7T-foA" secondAttribute="top" id="xw3-Lc-NdR"/>
+                            <constraint firstAttribute="trailing" secondItem="Q4W-ci-fAV" secondAttribute="trailing" constant="5" id="zu9-rC-eN8"/>
+                        </constraints>
+                    </view>
                 </subviews>
                 <constraints>
+                    <constraint firstItem="dBx-as-tHm" firstAttribute="top" secondItem="tZL-BE-Wz3" secondAttribute="bottom" constant="8" id="3ip-I5-p6K"/>
+                    <constraint firstItem="gA2-Dd-hhs" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="top" constant="8" id="4iK-GN-I4Y"/>
+                    <constraint firstItem="gA2-Dd-hhs" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leadingMargin" id="51e-3F-nVj"/>
+                    <constraint firstItem="PKY-Wp-lYg" firstAttribute="leading" secondItem="0KC-8z-YJb" secondAttribute="trailing" constant="8" id="535-Qb-VXJ"/>
                     <constraint firstAttribute="trailing" secondItem="dBx-as-tHm" secondAttribute="trailing" id="6Gq-jc-yM2"/>
-                    <constraint firstAttribute="trailing" secondItem="0KC-8z-YJb" secondAttribute="trailing" id="8GF-o3-P8V"/>
                     <constraint firstAttribute="bottom" secondItem="dBx-as-tHm" secondAttribute="bottom" id="Aqn-Up-Y5x"/>
-                    <constraint firstAttribute="bottom" secondItem="0KC-8z-YJb" secondAttribute="bottom" id="W4t-4k-faU"/>
+                    <constraint firstItem="GRZ-7T-foA" firstAttribute="trailing" secondItem="H2p-sc-9uM" secondAttribute="trailingMargin" id="BLJ-Le-3zn"/>
+                    <constraint firstItem="PKY-Wp-lYg" firstAttribute="centerY" secondItem="0KC-8z-YJb" secondAttribute="centerY" id="CFP-85-4hR"/>
+                    <constraint firstItem="VXl-BY-jK1" firstAttribute="leading" secondItem="gA2-Dd-hhs" secondAttribute="trailing" id="K2S-Dr-smS"/>
+                    <constraint firstItem="tZL-BE-Wz3" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leadingMargin" id="MYM-ab-MlJ"/>
+                    <constraint firstItem="0KC-8z-YJb" firstAttribute="top" secondItem="gA2-Dd-hhs" secondAttribute="bottom" id="OK4-xY-ZHM"/>
+                    <constraint firstItem="tZL-BE-Wz3" firstAttribute="trailing" secondItem="H2p-sc-9uM" secondAttribute="trailingMargin" id="U7v-Qr-V8j"/>
+                    <constraint firstItem="GRZ-7T-foA" firstAttribute="centerY" secondItem="0KC-8z-YJb" secondAttribute="centerY" id="WS2-CS-PVt"/>
+                    <constraint firstItem="VXl-BY-jK1" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="top" constant="8" id="atM-p3-Jbx"/>
+                    <constraint firstItem="tZL-BE-Wz3" firstAttribute="top" secondItem="0KC-8z-YJb" secondAttribute="bottom" constant="8" id="bp7-ZN-gaE"/>
                     <constraint firstItem="dBx-as-tHm" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leadingMargin" id="eZE-e4-4lU"/>
-                    <constraint firstItem="0KC-8z-YJb" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="top" constant="5" id="f4g-0c-qpP"/>
+                    <constraint firstItem="GRZ-7T-foA" firstAttribute="leading" secondItem="PKY-Wp-lYg" secondAttribute="trailing" constant="8" id="qSt-6H-ED9"/>
                     <constraint firstItem="0KC-8z-YJb" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leading" id="vdP-LL-Sjw"/>
+                    <constraint firstItem="VXl-BY-jK1" firstAttribute="trailing" secondItem="H2p-sc-9uM" secondAttribute="trailingMargin" id="yGE-rS-iOn"/>
                 </constraints>
             </tableViewCellContentView>
             <viewLayoutGuide key="safeArea" id="njF-e1-oar"/>
             <connections>
+                <outlet property="firstLabel" destination="gA2-Dd-hhs" id="vQH-kr-0BY"/>
+                <outlet property="leftRoundImageView" destination="m1K-1e-nLb" id="VRl-TT-HPm"/>
+                <outlet property="leftRoundView" destination="PKY-Wp-lYg" id="DE8-3p-43b"/>
+                <outlet property="rightRoundImageView" destination="Q4W-ci-fAV" id="k0d-EZ-6Dh"/>
+                <outlet property="rightRoundView" destination="GRZ-7T-foA" id="4F8-Mi-Pbu"/>
+                <outlet property="secondLabel" destination="VXl-BY-jK1" id="rdd-Ye-uFf"/>
                 <outlet property="tableView" destination="0KC-8z-YJb" id="xIZ-ND-PCN"/>
+                <outlet property="textField" destination="alB-Bx-Kz4" id="3kP-jp-80o"/>
+                <outlet property="textFieldBgView" destination="tZL-BE-Wz3" id="Lf0-ad-3uz"/>
             </connections>
-            <point key="canvasLocation" x="137.68115942028987" y="178.45982142857142"/>
+            <point key="canvasLocation" x="137.68115942028987" y="204.57589285714286"/>
         </tableViewCell>
     </objects>
     <resources>
+        <namedColor name="blackwhite">
+            <color red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
+        </namedColor>
         <namedColor name="gray">
             <color red="0.96100002527236938" green="0.9649999737739563" blue="0.97299998998641968" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
         </namedColor>
         <systemColor name="systemBackgroundColor">
             <color white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+        </systemColor>
+        <systemColor name="systemGray2Color">
+            <color red="0.68235294117647061" green="0.68235294117647061" blue="0.69803921568627447" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+        </systemColor>
+        <systemColor name="systemGrayColor">
+            <color red="0.55686274509803924" green="0.55686274509803924" blue="0.57647058823529407" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
         </systemColor>
     </resources>
 </document>
